# AutoSurveyClaw

./: README.md  SURVEYCLAW_AGENTS.md  SURVEYCLAW_CLAUDE.md  config.yaml  config_qml_e4b.yaml  pyproject.toml  sentinel.sh
artifacts/nesy_e4b_survey/: checkpoint.json  heartbeat.json  pipeline_summary.json
artifacts/nesy_survey/: checkpoint.json  heartbeat.json  pipeline_summary.json
artifacts/qml_e4b_survey/: checkpoint.json  heartbeat.json  pipeline_summary.json
artifacts/snn_survey/: checkpoint.json  degradation_signal.json  heartbeat.json  pipeline_summary.json
surveyclaw/: __init__.py  __main__.py  cli.py  config.py  evolution.py  evolution_aevolve.py  health.py  prompts.py  report.py
surveyclaw/agents/: __init__.py  base.py
tests/: conftest.py  e2e_real_llm.py  test_calendar.py  test_cli.py  test_compiler.py  test_domain_detector.py  test_entry_point_validation.py  test_knowledge_graph.py  test_mcp.py  test_memory_system.py  test_minimax_provider.py  test_overleaf.py  test_project_manager.py  test_prompt_adapter.py  test_rc_adapters.py  test_rc_cache.py  test_rc_checkpoint.py  test_rc_citation_resolve.py  test_rc_citation_verify.py  test_rc_cli.py  test_rc_config.py  test_rc_contracts.py  test_rc_kb.py  test_rc_literature.py  test_rc_llm.py  test_rc_novelty.py  test_rc_prompts.py  test_rc_quality.py  test_rc_report.py  test_rc_runner.py  test_rc_stages.py  test_rc_templates.py  test_rc_validator.py  test_servers.py  test_trends.py  test_web_crawler.py  test_web_integration.py  test_web_pdf_extractor.py  test_web_platform.py  test_web_scholar.py  (+1 more)
(+573 files in other folders)
